welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:23: error: value =- is not a member of Int
			x=-5+diag} 
                         ^